--- a/index_backup.html
+++ b/index_backup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
    <!-- source for script https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Sections_and_Outlines_of_an_HTML5_document -->
    <!--[if lt IE 9]>
   <script>
@@ -19,7 +19,7 @@
   </noscript>
 <![endif]-->
 <head>
-  <title>Access 401</title>
+  <title>Inclusive Chemistry</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
    <link rel="stylesheet" href="css/main.css">
@@ -29,17 +29,31 @@
   <a class="sr-only sr-only-focusable" href="#main">Skip to main content</a> 
   
   <div class="container">
-  <div class="row">
-  <div class="col-md-12">
-  <!-- Dr. Lee write stuff after this line -->
-  
+   <div class="row">
+   <div class="col-md-12">
+   <!-- Dr. Lee write stuff after this line -->
+샤론 오스틴님께,
+
+샤론, 안녕하세요. 
+참으로 감사해요. 
+앞으로도 항상 건강하시고 행복하세요.
+언제나 밝은 미소가 함께 하길 바랍니다.
+좋은 하루 보내세요.
+
   <!-- Dr. Lee write stuff before this line -->
   
-  </div>
-  </div>
+   </div>
+   </div>
   </div>
   
+  <div class="container">
+   <div class="row">
+     <div class="col-md-12">
+        <span lang="en">Modified to add Korean as web language 1 April 2019</span>
   
+   </div>
+   </div>
+  </div>
    
 
  <!-- Optional JavaScript -->
