--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
    <!-- source for script https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Sections_and_Outlines_of_an_HTML5_document -->
    <!--[if lt IE 9]>
   <script>
@@ -49,7 +49,11 @@
   <div class="container">
    <div class="row">
      <div class="col-md-12">
-        <span lang="en">Modified to add Korean as web language 1 April 2019</span>
+        <p tabindex="0">This page last modified or reviewed</p>
+        <ul>
+           <li>content: 8 November 2019</li>
+           <li>Language changed from ko to en 8 November 2019</li>
+        </ul>
   
    </div>
    </div>
