--- a/index_backup.html
+++ b/index_backup.html
@@ -44,7 +44,7 @@
 <table>
   <thead>
     <tr>
-      <th>Header 1</th>
+      <th>Group 1A</th>
       <th>Header 2</th>
       <th>Header 3</th>
       <th>Header 4</th>
