--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen"><ul><li data-element="hydrogen">Hydrogen</li><li data-atomic="1"> Atomic Number:1</li></ul></td>
+       <td id="hydrogen"><ul><li data-atomicnumber="1">1</li><li data-symbol="H">Hydrogen</li><li data-name="hydrogen">Hydrogen</li><li data-atomicweight="1.008">1</li></ul></td>
       <td>Row 1, Cell 2</td>
       <td>Row 1, Cell 3</td>
       <td>Row 1, Cell 4</td>
