--- a/index_backup.html
+++ b/index_backup.html
@@ -44,7 +44,7 @@
 <table>
   <thead>
     <tr>
-      <th>Group 1A</th>
+      <th>Header 1</th>
       <th>Header 2</th>
       <th>Header 3</th>
       <th>Header 4</th>
@@ -66,7 +66,7 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids"><ul><li data-element="hydrogen">Hydrogen</li><li data-atomic="1"> Atomic Number:1</li></ul></td>
+       <td id="hydrogen"><ul><li data-atomicnumber="1">1</li><li data-symbol="H">Hydrogen</li><li data-name="hydrogen">Hydrogen</li><li data-atomicweight="1.008">1</li></ul></td>
       <td>Row 1, Cell 2</td>
       <td>Row 1, Cell 3</td>
       <td>Row 1, Cell 4</td>
@@ -289,7 +289,7 @@ function searchElement() {
   }
 }
 </script>
-   <!--  end js from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_filter_table -->     
+  <!--  end js from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_filter_table -->     
      
  <!-- Optional JavaScript -->
  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
