--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <table>
   <thead>
     <tr>
-      <th>Header 1</th>
+      <th>Group IA</th>
       <th>Header 2</th>
       <th>Header 3</th>
       <th>Header 4</th>
@@ -65,7 +65,7 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen"><ul><li data-atomicnumber="1">1</li><li data-symbol="H">Hydrogen</li><li data-name="hydrogen">Hydrogen</li><li data-atomicweight="1.008">1</li></ul></td>
+       <td id="hydrogen" class="solids"><ul><li data-atomicnumber="1">1</li><li data-symbol="H">H</li><li data-name="hydrogen">Hydrogen</li><li data-atomicweight="1.008">1</li></ul></td>
       <td>Row 1, Cell 2</td>
       <td>Row 1, Cell 3</td>
       <td>Row 1, Cell 4</td>
