--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids"><ul><li data-atomicnumber="1">1</li><li data-symbol="H">H</li><li data-name="hydrogen">Hydrogen</li><li data-atomicweight="1.008">1</li></ul></td>
+       <td id="hydrogen" class="solids"><ul><li data-number="1">1</li><li data-symbol="H" class="bold">H</li><li data-name="hydrogen">Hydrogen</li><li data-weight="1.008">1</li></ul></td>
       <td>Row 1, Cell 2</td>
       <td>Row 1, Cell 3</td>
       <td>Row 1, Cell 4</td>
