--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids"><ul><li data-number="1">1</li><li data-symbol="H" class="bold">H</li><li data-name="hydrogen">Hydrogen</li><li data-weight="1.008">1</li></ul></td>
+       <td id="hydrogen" class="solids" taborder="1"><ul><li data-number="1">1</li><li data-symbol="H" class="bold">H</li><li data-name="hydrogen">Hydrogen</li><li data-weight="1point008">1.008</li></ul></td>
       <td>Row 1, Cell 2</td>
       <td>Row 1, Cell 3</td>
       <td>Row 1, Cell 4</td>
@@ -85,7 +85,7 @@
       <td>Row 1, Cell 18</td>
     </tr>
     <tr>
-      <td>Row 2, Cell 1</td>
+        <td id="lithium" class="solids" taborder="2"><ul><li data-number="3">1</li><li data-symbol="Li" class="bold">Li</li><li data-name="lithium">Lithium</li><li data-weight="5point3917">5.3917</li></ul></td>
       <td>Row 2, Cell 2</td>
       <td>Row 2, Cell 3</td>
       <td>Row 2, Cell 4</td>
