--- a/index_backup2.html
+++ b/index_backup2.html
@@ -32,7 +32,6 @@
    <div class="row">
    <div class="col-md-12">
 
-     
      <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
       
       </div></div></div>
@@ -44,7 +43,7 @@
 <table>
   <thead>
     <tr>
-      <th>Header 1</th>
+      <th>Group IA</th>
       <th>Header 2</th>
       <th>Header 3</th>
       <th>Header 4</th>
@@ -66,7 +65,7 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen"><ul><li data-atomicnumber="1">1</li><li data-symbol="H">Hydrogen</li><li data-name="hydrogen">Hydrogen</li><li data-atomicweight="1.008">1</li></ul></td>
+       <td id="hydrogen" class="solids" taborder="1"><ul><li data-number="1">1</li><li data-symbol="H" class="bold">H</li><li data-name="hydrogen">Hydrogen</li><li data-weight="1point008">1.008</li></ul></td>
       <td>Row 1, Cell 2</td>
       <td>Row 1, Cell 3</td>
       <td>Row 1, Cell 4</td>
@@ -86,7 +85,7 @@
       <td>Row 1, Cell 18</td>
     </tr>
     <tr>
-      <td>Row 2, Cell 1</td>
+        <td id="lithium" class="solids" taborder="2"><ul><li data-number="3">1</li><li data-symbol="Li" class="bold">Li</li><li data-name="lithium">Lithium</li><li data-weight="5point3917">5.3917</li></ul></td>
       <td>Row 2, Cell 2</td>
       <td>Row 2, Cell 3</td>
       <td>Row 2, Cell 4</td>
