--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids"><button type="button" name="hyrdrogen" taborder="1">H</button><ul><li data-number="1">1</li><li data-symbol="H" class="bold">H</li><li data-name="hydrogen">Hydrogen</li><li data-weight="hydrogen">1.008</li></ul></td>
+       <td id="hydrogen" class="solids"><button type="button" class="btn btn-dark" name="hyrdrogen" taborder="1">H</button><ul><li data-number="1">1</li><li data-name="hydrogen">Hydrogen</li><li data-weight="hydrogen">1.008</li></ul></td>
       <td>Row 1, Cell 2</td>
       <td>Row 1, Cell 3</td>
       <td>Row 1, Cell 4</td>
