--- a/index_backup2.html
+++ b/index_backup2.html
@@ -27,17 +27,18 @@
 
   <body>
   <a class="sr-only sr-only-focusable" href="#main">Skip to main content</a> 
+     <div style="height:200px;">&nbsp;</div>
      
-      <div class="container">
-   <div class="row">
-   <div class="col-md-12">
-
-     <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
-      
-      </div></div></div>
+<div class="container">
+ <div class="row">
+  <div class="col-md-12">
+   <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+  </div>
+ </div>
+</div>
   
   <div class="container">
-   <div class="row">
+  <div class="row">
    <div class="col-md-12">
 
 <table>
@@ -65,7 +66,7 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids" taborder="1"><ul><li data-number="1">1</li><li data-symbol="H" class="bold">H</li><li data-name="hydrogen">Hydrogen</li><li data-weight="1point008">1.008</li></ul></td>
+       <td id="hydrogen" class="solids"><button type="button" class="btn btn-dark" name="hyrdrogen" taborder="1">H</button><ul><li data-number="1">1</li><li data-name="hydrogen">Hydrogen</li><li data-weight="hydrogen">1.008</li></ul></td>
       <td>Row 1, Cell 2</td>
       <td>Row 1, Cell 3</td>
       <td>Row 1, Cell 4</td>
@@ -85,7 +86,7 @@
       <td>Row 1, Cell 18</td>
     </tr>
     <tr>
-        <td id="lithium" class="solids" taborder="2"><ul><li data-number="3">1</li><li data-symbol="Li" class="bold">Li</li><li data-name="lithium">Lithium</li><li data-weight="5point3917">5.3917</li></ul></td>
+       <td id="lithium" class="solids"><button type="button" name="lithium" taborder="2">Li</button><ul><li data-number="3">1</li><li data-symbol="Li" class="bold">Li</li><li data-name="lithium">Lithium</li><li data-weight="hydrogen">5.3917</li></ul></td>
       <td>Row 2, Cell 2</td>
       <td>Row 2, Cell 3</td>
       <td>Row 2, Cell 4</td>
