--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids"><button type="button" class="btn btn-dark" name="hyrdrogen" taborder="1">H</button><ul><li data-number="1">1</li><li data-name="hydrogen">Hydrogen</li><li data-weight="hydrogen">1.008</li></ul></td>
+       <td id="hydrogen" class="solids" tabindex="1"><button type="button" class="btn btn-dark" name="hyrdrogen">H</button><ul><li data-number="1">1</li><li data-name="hydrogen">Hydrogen</li><li data-weight="hydrogen">1.008</li></ul></td>
       <td>Row 1, Cell 2</td>
       <td>Row 1, Cell 3</td>
       <td>Row 1, Cell 4</td>
@@ -86,7 +86,7 @@
       <td>Row 1, Cell 18</td>
     </tr>
     <tr>
-       <td id="lithium" class="solids"><button type="button" name="lithium" taborder="2">Li</button><ul><li data-number="3">1</li><li data-symbol="Li" class="bold">Li</li><li data-name="lithium">Lithium</li><li data-weight="hydrogen">5.3917</li></ul></td>
+       <td id="lithium" class="solids" tabindex="2"><button type="button" class="btn btn-dark" name="lithium">Li</button><ul><li data-number="3">3</li><li data-symbol="Li" class="bold">Li</li><li data-name="lithium">Lithium</li><li data-weight="hydrogen">5.3917</li></ul></td>
       <td>Row 2, Cell 2</td>
       <td>Row 2, Cell 3</td>
       <td>Row 2, Cell 4</td>
