--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  </div>
 </div>
   
-  <div class="container">
+  <div class="container add50">
   <div class="row">
    <div class="col-md-12">
 
