--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <a class="sr-only sr-only-focusable" href="#main">Skip to main content</a> 
      <div style="height:200px;">&nbsp;</div>
      
-   <div style="margin-bottom:50px;">
+   <div class="left100 bottom50">
    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
   </div>
 
