--- a/css/main_backup.html
+++ b/css/main_backup.html
@@ -15,7 +15,17 @@ background-color: #98FB98;
 }
 ul {
   list-style: none;
+  padding-right: 10px;
+}
+table {
+  padding-left: 110px;
 }
 table, th, td {
   border: 1px solid black;
+}
+.left100 {
+  margin-left:100px;
+}
+.bottom50 {
+  margin-bottom: 50px;
 }
