--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
   </div>
 
-
-<table class="left100">
+<div class="left100">
+<table>
   <thead>
     <tr>
       <th>Group IA</th>
@@ -239,13 +239,14 @@
     </tr>
   </tbody>
 </table>
-
+     </div>
+     <div  class="left100">
         <p tabindex="0">This page last modified or reviewed</p>
         <ul>
            <li>content: 11 November 2019</li>
            <li>Removed Bootstrap 11 November 2019</li>
         </ul>
-  
+     </div>
      
  <!-- js from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_filter_table -->    
  <script>
