--- a/css/main_backup.html
+++ b/css/main_backup.html
@@ -17,9 +17,6 @@ ul {
   list-style: none;
   padding-right: 10px;
 }
-table {
-  padding-left: 110px;
-}
 table, th, td {
   border: 1px solid black;
 }
@@ -28,4 +25,12 @@ table, th, td {
 }
 .bottom50 {
   margin-bottom: 50px;
+}
+.atomicnumber {
+  float: right;
+  margin-right: 10px;
+  font-weight: bold;
+}
+.hidden {
+  visibility: hidden;
 }
