--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
   <tbody>
     <tr>
        <td id="hydrogen" class="solids" tabindex="1"><button type="button" class="btn btn-dark" name="hyrdrogen">H</button><span class="atomicnumber" data-atomicnumber="1">1</span><ul><li data-name="hydrogen">Hydrogen</li><li data-weight="hydrogen">1.008</li><li data-groundstate="hydrogen">1s</li><li data-ev="hydrogen">13.5984</li></ul></td>
-      <td>Row 1, Cell 2</td>
-      <td>Row 1, Cell 3</td>
-      <td>Row 1, Cell 4</td>
-      <td>Row 1, Cell 5</td>
-      <td>Row 1, Cell 6</td>
-      <td>Row 1, Cell 7</td>
-      <td>Row 1, Cell 8</td>
-      <td>Row 1, Cell 9</td>
-      <td>Row 1, Cell 10</td>
-      <td>Row 1, Cell 11</td>
-      <td>Row 1, Cell 12</td>
-      <td>Row 1, Cell 13</td>
-      <td>Row 1, Cell 14</td>
-      <td>Row 1, Cell 15</td>
-      <td>Row 1, Cell 16</td>
-      <td>Row 1, Cell 17</td>
+      <td class="hidden">Row 1, Cell 2</td>
+      <td class="hidden">Row 1, Cell 3</td>
+      <td class="hidden">Row 1, Cell 4</td>
+      <td class="hidden">Row 1, Cell 5</td>
+      <td class="hidden">Row 1, Cell 6</td>
+      <td class="hidden">Row 1, Cell 7</td>
+      <td class="hidden">Row 1, Cell 8</td>
+      <td class="hidden">Row 1, Cell 9</td>
+      <td class="hidden">Row 1, Cell 10</td>
+      <td class="hidden">Row 1, Cell 11</td>
+      <td class="hidden">Row 1, Cell 12</td>
+      <td class="hidden">Row 1, Cell 13</td>
+      <td class="hidden">Row 1, Cell 14</td>
+      <td class="hidden">Row 1, Cell 15</td>
+      <td class="hidden">Row 1, Cell 16</td>
+      <td class="hidden">Row 1, Cell 17</td>
       <td>Row 1, Cell 18</td>
     </tr>
     <tr>
