--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <td class="hidden">Row 1, Cell 15</td>
       <td class="hidden">Row 1, Cell 16</td>
       <td class="hidden">Row 1, Cell 17</td>
-      <td>Row 1, Cell 18</td>
+         <td id="helium" class="gases"><button type="button" name="helium">He</button><span class="atomicnumber" data-atomicnumber="2">1</span><ul><li data-name="helium">Helium</li><li data-weight="helium">4.028</li><li data-groundstate="helium">1s^2</li><li data-ev="helium">24.5874</li></ul></td>
     </tr>
     <tr>
        <td id="lithium" class="solids"><button type="button" class="btn btn-dark" name="lithium">Li</button><span class="atomicnumber" data-atomicnumber="3">3</span><ul><li data-name="lithium">Lithium</li><li data-weight="lithium">1.008</li><li data-groundstate="lithium">1s^2 2s</li><li data-ev="lithium">5.3917</li></ul></td>
