--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids"><button type="button"  name="hyrdrogen">H</button><span class="atomicnumber" data-atomicnumber="1">1</span><ul><li data-name="hydrogen">Hydrogen</li><li data-weight="hydrogen">1.008</li><li data-groundstate="hydrogen">1s</li><li data-ev="hydrogen">13.5984</li></ul></td>
+       <td id="hydrogen" class="solids"><button type="button" name="hyrdrogen">Hydrogen</button><ul><li data-name="hydrogen">Hydrogen</li><li data-weight="hydrogen">1.008</li><li data-groundstate="hydrogen">1s</li><li data-ev="hydrogen">13.5984</li></ul><span class="atomicnumber" data-atomicnumber="1">1</span></td>
       <td class="hidden">Row 1, Cell 2</td>
       <td class="hidden">Row 1, Cell 3</td>
       <td class="hidden">Row 1, Cell 4</td>
@@ -75,10 +75,10 @@
       <td class="hidden">Row 1, Cell 15</td>
       <td class="hidden">Row 1, Cell 16</td>
       <td class="hidden">Row 1, Cell 17</td>
-         <td id="helium" class="gases"><button type="button" name="helium">H e</button><span class="atomicnumber" data-atomicnumber="2">2</span><ul><li data-name="helium">Helium</li><li data-weight="helium">4.028</li><li data-groundstate="helium">1s^2</li><li data-ev="helium">24.5874</li></ul></td>
+         <td id="helium" class="gases"><button type="button" name="helium">Helium</button><ul><li data-name="helium">Helium</li><li data-weight="helium">4.028</li><li data-groundstate="helium">1s^2</li><li data-ev="helium">24.5874</li></ul><span class="atomicnumber" data-atomicnumber="2">2</span></td>
     </tr>
     <tr>
-       <td id="lithium" class="solids"><button type="button"  name="lithium">L i</button><span class="atomicnumber" data-atomicnumber="3">3</span><ul><li data-name="lithium">Lithium</li><li data-weight="lithium">1.008</li><li data-groundstate="lithium">1s^2 2s</li><li data-ev="lithium">5.3917</li></ul></td>
+       <td id="lithium" class="solids"><button type="button" name="lithium">Lithium</button><ul><li data-name="lithium">Lithium</li><li data-weight="lithium">1.008</li><li data-groundstate="lithium">1s^2 2s</li><li data-ev="lithium">5.3917</li></ul><span class="atomicnumber" data-atomicnumber="3">3</span></td>
       <td>Row 2, Cell 2</td>
       <td>Row 2, Cell 3</td>
       <td>Row 2, Cell 4</td>
