--- a/css/main_backup.html
+++ b/css/main_backup.html
@@ -15,7 +15,7 @@ background-color: #98FB98;
 }
 ul {
   list-style: none;
-  padding-right: 10px;
+  padding-right: 12px;
 }
 table, th, td {
   border: 1px solid black;
@@ -26,11 +26,19 @@ table, th, td {
 .bottom50 {
   margin-bottom: 50px;
 }
-.atomicnumber {
-  float: right;
-  margin-right: 10px;
-  font-weight: bold;
-}
+/* use hidden versus diplay none to keep layout */
 .hidden {
   visibility: hidden;
 }
+button {
+  width: 100%;
+  background-color: black;
+  color: white;
+  boder: 1px solid black;
+}
+/* at stands for assistive technology screen-reader only */
+.at {
+  width:1px;
+  height:1px;
+}
+  
