--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <tbody>
     <tr>
        <td id="hydrogen" class="solids"><button type="button" name="hyrdrogen">Hydrogen</button>
-          <ul>
+          <ul tabindex="0">
              <li data-symbol="h"><span class="at">Atomic Symbol</span>H</li>
              <li data-atomicnumber="1"><span class="at">Atomic number</span>1</li>
              <li data-weight="hydrogen"><span class="at">Atomic weight</span>1.008</li>
