--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <td class="hidden">Row 1, Cell 17</td>
       <td id="helium" class="gases">
          <button type="button" name="helium">Helium</button>
-           <ul>
+           <ul tabindex="0">
              <li data-symbol="He"><span class="at">Atomic Symbol</span>H e</li>
              <li data-atomicnumber="2"><span class="at">Atomic number</span>2</li>
              <li data-weight="helium"><span class="at">Atomic weight</span>4.0026</li>
