--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
        </td>
     </tr>
     <tr>
-       <td id="lithium" class="solids"><button type="button" name="lithium">Lithium</button><ul><li data-name="lithium">Lithium</li><li data-weight="lithium">1.008</li><li data-groundstate="lithium">1s^2 2s</li><li data-ev="lithium">5.3917</li></ul><span class="atomicnumber" data-atomicnumber="3">3</span></td>
+       <td id="lithium" class="solids" tabindex="0">Lithium<ul><li data-name="lithium">Lithium</li><li data-weight="lithium">1.008</li><li data-groundstate="lithium">1s^2 2s</li><li data-ev="lithium">5.3917</li></ul><span class="atomicnumber" data-atomicnumber="3">3</span></td>
       <td>Row 2, Cell 2</td>
       <td>Row 2, Cell 3</td>
       <td>Row 2, Cell 4</td>
