--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids"><button type="button" name="hyrdrogen">Hydrogen</button>
-          <ul tabindex="0">
-             <li data-symbol="h"><span class="at">Atomic Symbol</span>H</li>
-             <li data-atomicnumber="1"><span class="at">Atomic number</span>1</li>
-             <li data-weight="hydrogen"><span class="at">Atomic weight</span>1.008</li>
-             <li data-ev="hydrogen"><span class="at">Ionization energy</span>13.5984</li>
-             <li data-groundstate="hydrogen"><span class="at">Ground state configuration</span>1 s</li>  
+       <td id="hydrogen" class="solids" tabindex="0">Hydrogen
+          <ul>
+             <li data-symbol="h">H</li>
+             <li data-atomicnumber="1">1</li>
+             <li data-weight="hydrogen">1.008</li>
+             <li data-ev="hydrogen">13.5984</li>
+             <li data-groundstate="hydrogen">1 s</li>  
           </ul>
        </td>
       <td class="hidden">Row 1, Cell 2</td>
@@ -84,20 +84,27 @@
       <td class="hidden">Row 1, Cell 15</td>
       <td class="hidden">Row 1, Cell 16</td>
       <td class="hidden">Row 1, Cell 17</td>
-      <td id="helium" class="gases">
-         <button type="button" name="helium">Helium</button>
-           <ul tabindex="0">
-             <li data-symbol="He"><span class="at">Atomic Symbol</span>H e</li>
-             <li data-atomicnumber="2"><span class="at">Atomic number</span>2</li>
-             <li data-weight="helium"><span class="at">Atomic weight</span>4.0026</li>
-             <li data-ev="helium"><span class="at">Ionization energy</span>24.5874</li>
-             <li data-groundstate="hydrogen"><span class="at">Ground state configuration</span>1 s ^</li>  
+      <td id="helium" class="gases" tabindex="0">Helium
+           <ul>
+             <li data-symbol="He">H e</li>
+             <li data-atomicnumber="2">2</li>
+             <li data-weight="helium">4.0026</li>
+             <li data-ev="helium">24.5874</li>
+             <li data-groundstate="hydrogen">1 s ^</li>  
           </ul>
        
        </td>
     </tr>
     <tr>
-       <td id="lithium" class="solids" tabindex="0">Lithium<ul><li data-name="lithium">Lithium</li><li data-weight="lithium">1.008</li><li data-groundstate="lithium">1s^2 2s</li><li data-ev="lithium">5.3917</li></ul><span class="atomicnumber" data-atomicnumber="3">3</span></td>
+       <td id="lithium" class="solids" tabindex="0">Lithium
+          <ul>
+             <li data-atomicnumber="3">3</li>
+             <li data-symbol="lithium">L i</li>
+             <li data-weight="lithium">1.008</li>
+             <li data-groundstate="lithium">1s^2 2s</li>
+             <li data-ev="lithium">5.3917</li>
+          </ul>
+        </td>
       <td>Row 2, Cell 2</td>
       <td>Row 2, Cell 3</td>
       <td>Row 2, Cell 4</td>
