--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <tr>
        <td id="hydrogen" class="solids" tabindex="0">Hydrogen
           <ul>
-             <li data-symbol="h">H</li>
-             <li data-atomicnumber="1">1</li>
-             <li data-weight="hydrogen">1.008</li>
-             <li data-ev="hydrogen">13.5984</li>
-             <li data-groundstate="hydrogen">1 s</li>  
+             <li data-symbol="h">atomic symbol: H</li>
+             <li data-atomicnumber="1">atomic number: 1</li>
+             <li data-weight="hydrogen">atomic weight: 1.008</li>
+             <li data-groundstate="hydrogen">ground state: 1 s</li>
+             <li data-ev="hydrogen">ionization energy: 13.5984</li>         
           </ul>
        </td>
       <td class="hidden">Row 1, Cell 2</td>
