--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids" tabindex="0">Hydrogen
+       <td id="hydrogen" class="solids" tabindex="0"><span style="bigfont2">Hydrogen</span>
           <ul>
-             <li data-symbol="h">atomic symbol: H</li>
-             <li data-atomicnumber="1">atomic number: 1</li>
-             <li data-weight="hydrogen">atomic weight: 1.008</li>
-             <li data-groundstate="hydrogen">ground state: 1 s</li>
-             <li data-ev="hydrogen">ionization energy: 13.5984</li>         
+             <li data-symbol="h">atomic symbol: <span style="bigfont1">H</span></li>
+             <li data-atomicnumber="1">atomic number: <span style="bigfont1">1</span></li>
+             <li data-weight="hydrogen">atomic weight: <span style="bigfont1">1.008</span></li>
+             <li data-groundstate="hydrogen">ground state: <span style="bigfont1">1 s</span></li>
+             <li data-ev="hydrogen">ionization energy: <span style="bigfont1">13.5984</span></li>         
           </ul>
        </td>
       <td class="hidden">Row 1, Cell 2</td>
