--- a/css/main_backup.html
+++ b/css/main_backup.html
@@ -15,7 +15,7 @@ background-color: #98FB98;
 }
 ul {
   list-style: none;
-  padding-right: 12px;
+  margin-left: -20px;
 }
 table, th, td {
   border: 1px solid black;
@@ -30,15 +30,17 @@ table, th, td {
 .hidden {
   visibility: hidden;
 }
-button {
-  width: 100%;
-  background-color: black;
-  color: white;
-  boder: 1px solid black;
+.bigfont1 {
+  font-weight: bold;
+  font-size: 1em
 }
-/* at stands for assistive technology screen-reader only */
-.at {
-  width:1px;
-  height:1px;
+.bigfont2 {
+  font-weight: bold;
+  font-size: 2em
 }
-  
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
