--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <tr>
        <td id="hydrogen" class="solids" tabindex="0"><span class="bigfont2">Hydrogen</span>
           <ul>
-             <li data-symbol="h"><span class="left">atomic symbol:</span> <span class="bigfont1 right">H</span></li>
-             <li data-atomicnumber="1"><span class="left">atomic number:</span> <span class="bigfont1 right">1</span></li>
-             <li data-weight="hydrogen"><span class="left">atomic weight:</span> <span class="bigfont1 right">1.008</span></li>
-             <li data-groundstate="hydrogen"><span class="left">ground state:</span> <span class="bigfont1 right">1 s</span></li>
-             <li data-ev="hydrogen"><span class="left">ionization energy:</span> <span class="bigfont1 right">13.5984</span></li> 
+             <li data-symbol="h">atomic symbol:<span class="bigfont1">H</span></li>
+             <li data-atomicnumber="1">atomic number:<span class="bigfont1">1</span></li>
+             <li data-weight="hydrogen">atomic weight:<span class="bigfont1">1.008</span></li>
+             <li data-groundstate="hydrogen">ground state:<span class="bigfont1">1 s</span></li>
+             <li data-ev="hydrogen">ionization energy:<span class="bigfont1">13.5984</span></li> 
           </ul>
        </td>
       <td class="hidden">Row 1, Cell 2</td>
