--- a/index_backup1.html
+++ b/index_backup1.html
@@ -26,7 +26,10 @@
 
   <body>
   <a class="at" href="#main">Skip to main content</a> 
-     <div style="height:200px;">&nbsp;</div>
+        <div class="left100 bottom50">
+           <p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
+           <p tabindex="0">Tab</p>
+         </div>
      
    <div class="left100 bottom50">
       <label for="nameInput">Search Names</label>
@@ -59,13 +62,13 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids" tabindex="0"><span class="bigfont2">Hydrogen</span>
+       <td id="hydrogen" class="solids" tabindex="0">Hydrogen
           <ul>
-             <li data-symbol="h"><span class="bigfont1" aria-label="atomic symbol">H</span></li>
-             <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number">1</span></li>
-             <li data-weight="hydrogen"><span class="bigfont1" aria-label="standard atomic weight">1.008</span></li>
-             <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state">1 s</span></li>
-             <li data-ev="hydrogen"><span class="bigfont1" aria-label="ionization energy">13.5984</span></li> 
+             <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number one">1</span></li>
+             <li data-symbol="h"><span class="bigfont2" aria-label="atomic symbol H">H</span></li>
+             <li data-weight="hydrogen"><span class="bigfont1" aria-label="standard atomic weight one point zero zero eight">1.008</span></li>
+             <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state one s">1s</span></li>
+             <li data-ev="hydrogen"><span class="bigfont1" aria-label="ionization energy thirteen point five nine eight four">13.5984</span></li> 
           </ul>
        </td>
       <td class="hidden">Row 1, Cell 2</td>
