--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
      
      
 <div class="left100 bottom50">
-      <label for="indexinput">Search Elements:</label>
+      <label for="indexinput">Search Elements (Alphabetical Search):</label>
       <input type="text" id="indexinput" name="indexinput" onkeyup="searchElementFunction()"  title="ElementSearch"> 
        </div>
       <div class="left100 bottom50">
