--- a/index.html
+++ b/index.html
@@ -128,7 +128,16 @@
              <li data-ev="lithium">5.3917</li>
           </ul>
         </td>
-      <td>Row 2, Cell 2</td>
+             <td id="beryllium" class="solids" tabindex="0">Beryllium
+		     3
+          <ul>
+             <li data-atomicnumber="3">3</li>
+             <li data-symbol="lithium">Be 9.022</li>
+             <li data-weight="lithium">1.008</li>
+             <li data-groundstate="lithium">1s^2 2s</li>
+             <li data-ev="lithium">5.3917</li>
+          </ul>
+        </td>
       <td>Row 2, Cell 3</td>
       <td>Row 2, Cell 4</td>
       <td>Row 2, Cell 5</td>
