--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 </style>
  </head>
   <body>
-  <main>
-     
+   <main>
+      <div class="left100 bottom50"><p tabindex="0">placeholder</p></div>     
 <div class="left100 bottom50">
-      <label for="indexinput">Search Elements (Alphabetical Search):</label>
-      <input type="text" id="indexinput" name="indexinput" onkeyup="searchElementFunction()"  title="ElementSearch"> 
-       </div>
+ <label for="indexinput">Search Elements (Alphabetical Search):</label>
+ <input type="text" id="indexinput" name="indexinput" onkeyup="searchElementFunction()"  title="ElementSearch"> 
+</div>
 
 <div class="left100">
 <table id="indexTable">
@@ -288,6 +288,7 @@
         <li>No tabinidex used</li>
      </ul>
   </div>
+  </main>
  <!-- source code courtesy W3C schools https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_filter_table -->
  <script>
 function searchElementFunction() {
