--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@ function searchElementFunction() {
   input = document.getElementById("indexinput");
   filter = input.value.toUpperCase();
   table = document.getElementById("indexTable");
-  tr = table.getElementsByTagName("tr")[0,1,2,3,4,5,6,7,8];
+  tr = table.getElementsByTagName("tr");
   for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td")[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17];
+    td = tr[i].getElementsByTagName("td")[0];
     if (td) {
       txtValue = td.textContent || td.innerText;
       if (txtValue.toUpperCase().indexOf(filter) > -1) {
@@ -308,6 +308,15 @@ function searchElementFunction() {
       }
     }       
   }
+   for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[1];
+    if (td) {
+      txtValue = td.textContent || td.innerText;
+      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
 }
 </script>
      
