--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
  </head>
   <body>
    <main>
-      <div class="left100 bottom50"><p tabindex="0">placeholder</p></div>     
+      <div class="left100 bottom50"><p tabindex="0">Here goes nothing</p></div>     
 <div class="left100 bottom50">
  <label for="indexinput">Search Elements (Alphabetical Search):</label>
  <input type="text" id="indexinput" name="indexinput" onkeyup="searchElementFunction()"  title="ElementSearch"> 
