--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
  </head>
   <body>
    <main>
-      <div class="left100 bottom50"><p tabindex="0">Here goes nothing</p></div>     
+      <div class="left100 bottom50"><p tabindex="0">Here goes nothing!</p></div>     
 <div class="left100 bottom50">
  <label for="indexinput">Search Elements (Alphabetical Search):</label>
  <input type="text" id="indexinput" name="indexinput" onkeyup="searchElementFunction()"  title="ElementSearch"> 
@@ -322,7 +322,7 @@ function searchElementFunction() {
   }
 }
 </script>
-     
+    
  <!-- Optional JavaScript -->
  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
