--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
            <p tabindex="0">Tab</p>
          </div>
      
-   <input id='search_field_input' onkeyup='search_table()' type='text'>
+   
   
 <div class="left100 bottom50">
- <label for="indexinput">Search Elements (Alphabetical Search):</label>
- <input type="text" id="indexinput" name="indexinput" onkeyup="searchElementFunction()"  title="ElementSearch"> 
+ <label for="search_field_input">Search Elements (Alphabetical Search):</label>
+ <input id="search_field_input" onkeyup="search_table()" type="text">
 </div>
 <div class="left100">
 <table id="table_id">
