--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <td class="hidden">Row 1, Cell 15</td>
       <td class="hidden">Row 1, Cell 16</td>
       <td class="hidden">Row 1, Cell 17</td>
-      <td id="helium" class="gases" tabindex="0">Helium
+      <td id="helium" class="solids" tabindex="0">Helium
            <ul>
              <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number two">2</span></li>
              <li data-symbol="h e"><span class="bigfont2" aria-label="atomic symbol H">H e</span></li>
@@ -120,7 +120,15 @@
              <li data-ev="lithium">5.3917</li>
           </ul>
         </td>
-      <td>Row 2, Cell 2</td>
+        <td id="beryllium" class="solids" tabindex="0">Beryllium
+          <ul>
+             <li data-atomicnumber="4">4</li>
+             <li data-symbol="beryllium">B e</li>
+             <li data-weight="beryllium">9.0122</li>
+             <li data-groundstate="beryllium">1s^2 2s^2</li>
+             <li data-ev="beryllium">9.3227</li>
+          </ul>
+        </td>
       <td>Row 2, Cell 3</td>
       <td>Row 2, Cell 4</td>
       <td>Row 2, Cell 5</td>
