--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <thead>
     <tr>
       <th>Group IA</th>
-      <th>Header 2</th>
+      <th>Group IIA</th>
       <th>Header 3</th>
       <th>Header 4</th>
       <th>Header 5</th>
@@ -75,7 +75,7 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids" tabindex="0">Hydrogen
+       <td id="hydrogen" class="gases" tabindex="0">Hydrogen
           <ul>
              <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number one">1</span></li>
              <li data-symbol="h"><span class="bigfont2" aria-label="atomic symbol H">H</span></li>
